Require manifest to be downloaded successfully when installing Messages

This prevents the app being installed with bad metadata if something
isn't quite right.

Bug: 899088
Change-Id: If56c5096982a79e3172dc38f897e8a54af6857ec
Reviewed-on: https://chromium-review.googlesource.com/c/1303316
Reviewed-by: Jeremy Klein <jlklein@chromium.org>
Commit-Queue: Ben Wells <benwells@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604046}
Former-commit-id: c45167b26ce8f2ee7d0b44746436f42698d0f6e7