chrome/browser/chromeos/multidevice_setup/android_sms_app_helper_delegate_impl.cc
@@ -57,7 +57,7 @@ void AndroidSmsAppHelperDelegateImpl::InstallAndroidSmsApp(
           true /* override_previous_user_uninstall */,
           // The service worker does not load in time for the installability
           // check so we bypass it as a workaround.
-          true /* bypass_service_worker_check */),
+          true /* bypass_service_worker_check */, true /* require_manifest */),
       base::BindOnce(&AndroidSmsAppHelperDelegateImpl::OnAppInstalled,
                      weak_ptr_factory_.GetWeakPtr(), launch_on_install));
 }
